infra/homelab/longhorn/longhorn_ingress.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  entryPoints:
  - websecure
  routes:

    # Intranet access... must be authorized
  - kind: Rule
    match: Host(`longhorn.int.1earn.ing`)
    middlewares:
      - name: authentik
        namespace: authentik
    services:
    - kind: Service
      name: longhorn-frontend
      passHostHeader: true
      port: 80
    priority: 10

    # Redirects for Authentik Outpost
  - kind: Rule
    match: Host(`longhorn.int.1earn.ing`) && PathPrefix(`/outpost.goauthentik.io/`)
    priority: 15
    services:
    - kind: Service
      namespace: authentik
      name: ak-outpost-authentik-embedded-outpost
      port: 9000

  tls:
    secretName: longhorn-ingress-cert-secret
